Hireforce/objects/Hiring_Event__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>End_Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job Fair</fullName>
                </value>
                <value>
                    <fullName>Open House</fullName>
                </value>
                <value>
                    <fullName>Campus Recruitment</fullName>
                </value>
                <value>
                    <fullName>Walk-In Interview</fullName>
                </value>
                <value>
                    <fullName>Virtual Hiring Event</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organizer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organizer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hiring Events Managed by Me</relationshipLabel>
        <relationshipName>Hiring_Events_Managed_by_Me</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Start_Time</valueSetName>
        </valueSet>
    </fields>
    <label>Hiring Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hiring Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hiring Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>